components/CreateList/CreateList.module.css
.CreateList {
	border-radius: 4px;
	border: 2px rgb(77, 11, 11) solid;

	width: fit-content;

	margin-inline: auto;

	padding-block: 1rem;
	padding-inline: 1.5rem;

	animation: slideInDown 1.5s forwards;

	transition: width 0.5s ease;
}

.radioWrapper {
	max-width: 100%;
	line-height: 2;
}

.radioWrapper label + label {
	margin-left: 0.5rem;
}

.radioWrapper label input[type='radio'] {
	margin-right: 0.25rem;
}

.radioWrapper label input[type='text'] {
	max-width: 175px;
	max-height: 1.75rem;
	padding-left: 0.25rem;

	animation: widenOnDisplay 2s forwards;
}

.buttonWrapper {
	margin-top: 0.5rem;
	/* white-space: nowrap; */

	display: grid;
	grid-template-columns: 1fr 1fr;
	gap: 0.5rem;
}

.buttonWrapper > button {
	background-color: hsl(300, 85%, 45%);
	border: 1px solid hsl(300, 85%, 30%);
	border-radius: 5px;

	/* text-wrap: nowrap; */
}

@media (hover: hover) {
	/* when hover is supported */
	.CreateList button:hover {
		background-color: rgb(103, 38, 103);
		border-color: rgb(26, 255, 0);
		color: white;
		transition:
			background-color 0.75s,
			border-color 0.75s,
			color 0.25s;

		cursor: pointer;
	}
}

@keyframes slideInDown {
	from {
		transform: translateX(0%) translateY(-200%);
	}
	to {
		transform: translateX(0%) translateY(0%);
	}
}

@keyframes widenOnDisplay {
	from {
		width: 10%;
	}
	to {
		width: 100%;
	}
}

